fix: Tidy up header vertical spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ a:hover {
 }
 
 h1, h2, h3 {
-    margin: var(--vertical-spacing) 0 calc(2 * var(--vertical-spacing)) 0;
+    margin: 0 0 calc(2 * var(--vertical-spacing)) 0;
 }
 
 header h1 {
